--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Is-Your-Birthday-Lucky</title>
+    <link href="styles.css" rel="stylesheet"  />
 </head>
 <body>
     <h1>Is Your Birthday Lucky?</h1>
     <div class="container">
-        <label for="data-of-birth">Date of birth:</label>
-        <input type="data" id="data of birth"></input>
-        <label for="lucky-number">lucky number:</label>
+        <label for="data-of-birth">Date of birth</label>
+        <input type="data" id="date-of-birth"></input>
+        <label for="lucky-number">lucky number</label>
         <input type="number" id="lucky-number" placeholder="Enter a number">
         <button id="check-button">click</button>
         <textarea id="output-box" disabled></textarea>
