--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         <input type="number" id="lucky-number" placeholder="Enter a number">
         <button id="check-button">click</button>
         <textarea id="output-box" disabled></textarea>
+        <footer>  
+            <p>
+                "Your Birthday Informations are Not stored and your Informations are private"
+            </p>
+        <ul class="footer-list">
+            <a class="link" href="https://github.com/Lavanyabts">
+        <img src="image/github.svg" alt="github"  />
+           </a>
+            <a class="link" href="https://twitter.com/bts_lavanyaa">
+        <img src="image/twitter.svg" alt="twitter"  />
+        </a>    
+            <a class="link" href="https://discord.com/channels/@me">
+        <img src="image/discord.svg" alt="discord"  />
+        </a>    
+        </ul>
+        </footer>
     </div>
     <script src="app.js"></script>
 </body>
